# depressed-tiktok-bot

./: Dockerfile  fly.toml  pyproject.toml
.github/workflows/: fly.yml
depressed_tiktok_bot/: main.py
scripts/: docker-entrypoint.sh
tests/: test_integrations.py
