[tool.poetry]
name = "depressed-tiktok-bot"
version = "0.1.0"
description = ""
authors = ["Bohdan Rybak <bohdan.rybak@grammarly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
yt-dlp = "^2023.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
