[tool.poetry]
name = "depressed-tiktok-bot"
version = "0.1.0"
description = ""
authors = ["Bohdan Rybak <bohdan.rybak@grammarly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
yt-dlp = "^2023.12.30"
validators = "^0.22.0"
urlextract = "^1.8.0"

[tool.poetry.group.test]  # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
